Progress on end-to-end with text file storing locations of key value pair keys

--- a/src/main/CMakeLists.txt
+++ b/src/main/CMakeLists.txt
@@ -39,3 +39,11 @@ target_link_libraries(ciphertext_updates_updatable_encryption cd_encryption)
 target_link_libraries(ciphertext_updates_updatable_encryption hsm_encryption)
 target_link_libraries(ciphertext_updates_updatable_encryption hiredis_storage)
 target_link_libraries(ciphertext_updates_updatable_encryption actions)
+
+
+add_executable(populate_database_updatable populate_database_updatable.c)
+target_link_libraries(populate_database_updatable cloudhsmpkcs11)
+target_link_libraries(populate_database_updatable cd_encryption)
+target_link_libraries(populate_database_updatable hsm_encryption)
+target_link_libraries(populate_database_updatable hiredis_storage)
+target_link_libraries(populate_database_updatable actions)
